Working packaging (except zipping it up)